﻿Revision history for Dist-Zilla-Plugin-Bootstrap-lib

1.001000 2014-08-31T19:13:35Z
 [Dependencies::Stats]
 - Dependencies changed since 1.000005, see misc/*.deps* for details
 - develop: +1 ↑1 (suggests: ↑2)

1.000005 2014-08-15T21:16:17Z
 [00 Trivial]
 - CPANDAY!
 - no code changes.
 - whitespace reduction.

 [Dependencies::Stats]
 - Dependencies changed since 1.000004, see misc/*.deps* for details
 - develop: +1 (suggests: ↑1)

 [Misc]
 - Improve source side POD to reduce build side whitespace.

1.000004 2014-08-03T12:29:48Z
 [Dependencies::Stats]
 - Dependencies changed since 1.000003, see misc/*.deps* for details
 - configure: ↓1
 - develop: (suggests: ↑1)
 - test: +1 -3 (recommends: ↑1 -1)

 [Misc]
 - use -SingleEncoding
 - Get newer Test::ReportPrereqs

1.000003 2014-07-15T12:39:08Z
 [00 Trivial]
 - use newer Role::Bootstrap ( closes #2 )

 [Dependencies::Stats]
 - Dependencies changed since 1.000002, see misc/*.deps* for details
 - develop: (suggests: ↑1)
 - runtime: ↑1

1.000002 2014-07-15T07:33:24Z
 [00 Trivial]
 - Misc packaging cleanups

 [Dependencies::Stats]
 - Dependencies changed since 1.000001, see misc/*.deps* for details
 - configure: (recommends: ↑1)
 - develop: +3 -3 (suggests: +2 -1)
 - test: (recommends: ↑1)

1.000001 2014-04-05T11:36:12Z
 [00 Test Fixes]
 - Drop dependency on Path::FindDev

 [Dependencies::Aggregate]
 - 5.008 : 207 → 204
 - 5.010 : 186 → 183
 - 5.019 : 167 → 164

 [Dependencies::Stats]
 - Dependencies changed since 1.000000, see misc/*.deps* for details
 - test: +1 -1

1.000000 2014-04-05T06:23:20Z
 [00 Major]
 - This release contains mostly packaging changes that will be invisible to CPAN users.
 - However, it may require attention for downstream non-CPAN tooling.

 [01 Version Scheme]
 - Version Scheme is shortened from a mantissa of 8 to a mantissa of 6
 - This is the primary reason for the 1.xxx release.

 [02 Tooling is MakeMaker based]
 - Tooling is now switched to ExtUtils::MakeMaker