@@ -99,12 +99,8 @@
          "requires" : {
             "Dist::Zilla::Util::Test::KENTNL" : "1.003001",
             "ExtUtils::MakeMaker" : "0",
-            "File::Copy::Recursive" : "0",
             "File::Spec" : "0",
-            "FindBin" : "0",
-            "Path::Tiny" : "0",
             "Test::DZil" : "0",
-            "Test::Fatal" : "0",
             "Test::More" : "0.89"
          }
       }
@@ -180,16 +176,12 @@
          "Dist::Zilla::Role::Bootstrap" : "1.000003",
          "Dist::Zilla::Util::Test::KENTNL" : "1.003001",
          "ExtUtils::MakeMaker" : "6.98",
-         "File::Copy::Recursive" : "0.38",
          "File::Spec" : "3.49",
-         "FindBin" : "1.51",
          "Moose" : "2.1211",
-         "Path::Tiny" : "0.056",
          "Pod::Coverage::TrustPod" : "0.100003",
          "Test::CPAN::Changes" : "0.30",
          "Test::CPAN::Meta" : "0.23",
          "Test::DZil" : "5.020",
-         "Test::Fatal" : "0.013",
          "Test::Kwalitee" : "1.22",
          "Test::More" : "1.001003",
          "Test::Pod" : "1.48",
