@@ -29,12 +29,8 @@ my %WriteMakefileArgs = (
   "TEST_REQUIRES" => {
     "Dist::Zilla::Util::Test::KENTNL" => "1.003001",
     "ExtUtils::MakeMaker" => 0,
-    "File::Copy::Recursive" => 0,
     "File::Spec" => 0,
-    "FindBin" => 0,
-    "Path::Tiny" => 0,
     "Test::DZil" => 0,
-    "Test::Fatal" => 0,
     "Test::More" => "0.89"
   },
   "VERSION" => "1.001000",
@@ -48,13 +44,9 @@ my %FallbackPrereqs = (
   "Dist::Zilla::Role::Bootstrap" => "1.000000",
   "Dist::Zilla::Util::Test::KENTNL" => "1.003001",
   "ExtUtils::MakeMaker" => 0,
-  "File::Copy::Recursive" => 0,
   "File::Spec" => 0,
-  "FindBin" => 0,
   "Moose" => 0,
-  "Path::Tiny" => 0,
   "Test::DZil" => 0,
-  "Test::Fatal" => 0,
   "Test::More" => "0.89",
   "strict" => 0,
   "utf8" => 0,
