@@ -1,9 +1,16 @@
 ﻿Revision history for Dist-Zilla-Plugin-Bootstrap-lib
 
 1.001000 2014-08-31T19:13:35Z
+ [00 Minor]
+ - Test refactor.
+
  [Dependencies::Stats]
  - Dependencies changed since 1.000005, see misc/*.deps* for details
  - develop: +1 ↑1 (suggests: ↑2)
+ - test: +1 -1
+
+ [Tests]
+ - Reimplement tests using dztest.
 
 1.000005 2014-08-15T21:16:17Z
  [00 Trivial]
